[gd_scene load_steps=7 format=3 uid="uid://dwkd2txek61ka"]

[ext_resource type="Texture2D" uid="uid://t16adebrr2qk" path="res://assets/final/binder-button.png" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://d4jm3m5g7ioux" path="res://assets/final/binder-button-selected.png" id="2_fu7sn"]
[ext_resource type="Script" uid="uid://bp6putvw5mm1y" path="res://main_menu.gd" id="2_jix8l"]
[ext_resource type="Texture2D" uid="uid://butegaonl7dfb" path="res://assets/final/binder-button-highlighted.png" id="3_jix8l"]
[ext_resource type="Texture2D" uid="uid://dwebbq1ysgiux" path="res://assets/final/how-to-play.png" id="5_glbon"]
[ext_resource type="PackedScene" uid="uid://clh5sbrnsfl16" path="res://scenes/x-button.tscn" id="6_nlkkf"]

[node name="MainMenu" type="TextureRect"]
offset_right = 1151.0
offset_bottom = 644.0
texture = ExtResource("1_06t4h")
script = ExtResource("2_jix8l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 327.0
offset_right = 804.0
offset_bottom = 642.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Capo Collector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Play" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_06t4h")
texture_pressed = ExtResource("2_fu7sn")
texture_hover = ExtResource("3_jix8l")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.875
offset_right = 60.5
offset_bottom = 41.875
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="Objective" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_06t4h")
texture_pressed = ExtResource("2_fu7sn")
texture_hover = ExtResource("3_jix8l")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Objective"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.875
offset_right = 60.5
offset_bottom = 41.875
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2

[node name="HowTo" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_06t4h")
texture_pressed = ExtResource("2_fu7sn")
texture_hover = ExtResource("3_jix8l")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/HowTo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.875
offset_right = 60.5
offset_bottom = 41.875
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "How To Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveButton" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1143.0
offset_bottom = 640.0
texture = ExtResource("1_06t4h")

[node name="Objective" type="Label" parent="ObjectiveButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -174.0
offset_right = 412.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Gain as much money as you can without losing the respect of your workers! Acquire income streams that bring in varying amounts of Money and Respect. Income streams need Workers, who can also be hired. Make sure your workers are assigned to income streams, or they'll lose respect for you as their leader. Careful if you can't meet your respect quota or else you could become a target..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HowTo" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1138.0
offset_bottom = 644.0
texture = ExtResource("5_glbon")

[node name="Label" type="Label" parent="HowTo"]
layout_mode = 0
offset_left = 17.0
offset_top = 262.0
offset_right = 230.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Click the papers to view new income streams and workers to hire"
autowrap_mode = 2

[node name="Label2" type="Label" parent="HowTo"]
layout_mode = 0
offset_left = 495.0
offset_top = 145.0
offset_right = 708.0
offset_bottom = 294.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Click the binder to manage your income streams and workers. All income streams must have a worker on them to progress"
autowrap_mode = 2

[node name="Label3" type="Label" parent="HowTo"]
layout_mode = 0
offset_left = 907.0
offset_top = 315.0
offset_right = 1144.0
offset_bottom = 439.66663
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Click the calendar to progress to the next week. This will progress your income streams and refreshing your offers"
autowrap_mode = 2

[node name="X-Button" parent="." instance=ExtResource("6_nlkkf")]
visible = false
layout_mode = 0
offset_left = 61.0
offset_top = 47.0
offset_right = 125.0
offset_bottom = 111.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Objective" to="." method="_on_objective_pressed"]
[connection signal="pressed" from="VBoxContainer/HowTo" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="X-Button" to="." method="_on_x_button_pressed"]
